<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity -->
    <string name="app_name">StudyTimer</string>
    <string name="action_settings">Settings</string>
    <string name="StartButton">Hit the Books!</string>
    <string name="EditSubjects">Edit Subjects</string>
    <string name="ViewResults">View Results</string>

    <!-- Timer -->
    <string name="Countdown">00:12:37</string>
    <string name="ChangeSubject">Change Subject</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>
    <string name="currently_studying">Currently studying:</string>
    <string name="blank"> </string>

    <!-- Results -->
    <string name="Week">This Week</string>
    <string name="Results">Results</string>

    <!-- EditSubjects -->
    <string name="CreateNewSubject">Create New Subject</string>

    <!-- Add Subject -->
    <string name="Done">Add Subject</string>
    <string name="Color">Colors Here</string>
    <string name="Icon">Icons Here</string>
    <string name="SubjectName">Type Subject Here</string>
    <string name="title_activity_timer_page">TimerPage</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_edit_subjects">EditSubjects</string>
    <string name="title_activity_view_results">ViewResults</string>
    <string name="title_activity_create_new_subject">CreateNewSubject</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>

    <string-array name="subjects">
        <item>Calculus</item>
        <item>Algorithms</item>
        <item>Art History</item>
        <item>Graphic Design</item>
        <item>Underwater Basketweaving</item>
    </string-array>


</resources>
