<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@style/AppTheme"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/button1"
        style="@style/AppTheme"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Countdown"
        android:typeface="sans" />

    <Button
        android:id="@+id/button2"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/ChangeSubject" />

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="20dp"
        android:text="@string/Pause" />
    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="20dp"
        android:text="@string/Stop" />

</RelativeLayout>
