<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/button1"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/CreateNewSubject" />

    <Button
        android:id="@+id/button2"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="20dp"
        android:text="@string/Color" />
	
    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button2"
        android:layout_marginTop="20dp"
        android:text="@string/Icon" />

    <EditText
        android:id="@+id/editText1"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" 
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:background="@android:color/white"
        android:layout_below="@+id/button3"
        android:ems="10"
        android:hint="@string/SubjectName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="20dp"
        android:text="@string/Done" />

</RelativeLayout>