<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box_large"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/StartButton"
        android:onClick="startTimer" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/button1"
        android:src="@drawable/box_small"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Color" />
 
    <ImageButton
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box_small"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/EditSubjects"
        android:onClick="editSubjects" />

    <ImageButton
        android:id="@+id/button_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box_small"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_edit"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ViewResults" 
        android:onClick="viewResults" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_edit" 
        android:layout_centerHorizontal="true" 
        android:layout_marginLeft="30dp" 
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/text_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/EditSubjects" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_results"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/ViewResults" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/StartButton" />

</RelativeLayout>
