<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/box_small"
        android:contentDescription="@string/CreateNewSubject" />
    
    <ImageView
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box_color"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/Color" />
    
    <ImageButton
        android:id="@+id/color1"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/color_purple" />
    
    <ImageButton
        android:id="@+id/color2"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/color1"
        android:layout_toRightOf="@+id/color1"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/color_orange" />
    
    <ImageButton
        android:id="@+id/color3"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/color1"
        android:layout_toRightOf="@+id/color2"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/color_green" />
    
    <ImageButton
        android:id="@+id/color4"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/color1"
        android:layout_toRightOf="@+id/color3"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/color_red" />
    
    <ImageButton
        android:id="@+id/color5"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/color1"
        android:layout_toRightOf="@+id/color4"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/color_blue" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button2"
        android:src="@drawable/box_icon" 
        android:contentDescription="@string/Icon" />
    
    <ImageView
     	android:id="@+id/imageViewTextBox"
     	android:src="@drawable/box_small"
     	android:contentDescription="@string/Icon"
     	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/imageView1" />
     	    
    <ImageButton
        android:id="@+id/icon6"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="8.5dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_book" />
    
     <ImageButton
        android:id="@+id/icon5"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/icon6"
        android:layout_toRightOf="@+id/icon6"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_guitar" />

    <ImageButton
        android:id="@+id/icon4"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/icon6"
        android:layout_toRightOf="@+id/icon5"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_calculator" />

    <ImageButton
        android:id="@+id/icon2"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/icon6"
        android:layout_toRightOf="@+id/icon4"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_binoculars" />

    <ImageButton
        android:id="@+id/icon1"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_toRightOf="@+id/icon2"
        android:layout_alignTop="@+id/icon6"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_pencil" />

    <ImageButton
        android:id="@+id/icon7"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginTop="3dp"
        android:layout_alignLeft="@+id/icon6"
        android:layout_below="@+id/icon6"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_compass" />

    <ImageButton
        android:id="@+id/icon11"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_below="@+id/icon1"
        android:layout_toRightOf="@+id/icon4"
        android:layout_alignTop="@+id/icon7"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_parchment" />

    <ImageButton
        android:id="@+id/icon12"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignRight="@+id/icon1"
        android:layout_alignTop="@+id/icon7"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_beaker" />

    <ImageButton
        android:id="@+id/icon10"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_above="@+id/editText1"
        android:layout_alignLeft="@+id/icon4"
        android:layout_alignTop="@+id/icon7"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_apple" />

    <ImageButton
        android:id="@+id/icon8"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/icon7"
        android:layout_toRightOf="@+id/icon6"
        android:contentDescription="@string/Icon"
        android:src="@drawable/icon_brush" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/Done"
        android:src="@drawable/box_small"
        android:onClick="addSubject" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" 
        android:layout_marginTop="27dp"
        android:layout_width="260dp"
        android:layout_below="@+id/icon8"
        android:ems="10"
        android:hint="@string/SubjectName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
		android:layout_marginBottom="14dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/CreateNewSubject" />
    
    <TextView
        android:id="@+id/text_add_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button4"
        android:layout_centerHorizontal="true"
		android:layout_marginBottom="21dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/Done" />

</RelativeLayout>