<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box_small"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/EditSubjects" />
	
	<ImageView 
	    android:id="@+id/imageView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_alignLeft="@+id/button1"
	    android:layout_centerHorizontal="true"
	    android:src="@drawable/box_huge"  
	    android:layout_below="@+id/button1"
	    android:contentDescription="@string/EditSubjects" />
	
    <ImageButton
	    android:id="@+id/button2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:contentDescription="@string/CreateNewSubject"
	    android:onClick="createNewSubject"
	    android:src="@drawable/box_small" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/EditSubjects" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/CreateNewSubject"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iconbox1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/color_purple" />
    
    <ImageView
        android:id="@+id/icon_box1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/icon_pencil" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconbox1"
        android:layout_toRightOf="@+id/iconbox1"
        android:visibility="invisible" />
    
    <ImageButton
        android:id="@+id/delete1"
        android:contentDescription="@string/Week"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/iconbox1"
        android:layout_alignRight="@+id/textView1"
        android:visibility="invisible"
        android:onClick="deleteItem"
        android:tag="1"
        android:src="@drawable/button_delete" />
    
     <ImageView
        android:id="@+id/iconbox2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/iconbox1"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/color_purple" />
     
     <ImageView
        android:id="@+id/icon_box2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/iconbox1"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/icon_book" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconbox2"
        android:layout_toRightOf="@+id/iconbox2"
        android:visibility="invisible" />
    
    <ImageButton
        android:id="@+id/delete2"
        android:contentDescription="@string/Week"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/iconbox2"
        android:layout_alignRight="@+id/textView1"
        android:visibility="invisible"
        android:onClick="deleteItem"
        android:tag="2"
        android:src="@drawable/button_delete" />
    
    <ImageView
        android:id="@+id/iconbox3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/iconbox2"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/color_purple" />
    
    <ImageView
        android:id="@+id/icon_box3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/iconbox2"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/icon_beaker" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconbox3"
        android:layout_toRightOf="@+id/iconbox3"
        android:visibility="invisible" />
    
    <ImageButton
        android:id="@+id/delete3"
        android:contentDescription="@string/Week"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/iconbox3"
        android:layout_alignRight="@+id/textView1"
        android:visibility="invisible"
        android:onClick="deleteItem"
        android:tag="3"
        android:src="@drawable/button_delete" />

    <ImageView
        android:id="@+id/iconbox4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/iconbox3"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/color_purple" />
    
    <ImageView
        android:id="@+id/icon_box4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/iconbox3"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/icon_guitar" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconbox4"
        android:layout_toRightOf="@+id/iconbox4"
        android:visibility="invisible" />
    
    <ImageButton
        android:id="@+id/delete4"
        android:contentDescription="@string/Week"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/iconbox4"
        android:layout_alignRight="@+id/textView1"
        android:visibility="invisible"
        android:onClick="deleteItem"
        android:tag="4"
        android:src="@drawable/button_delete" />
    
    <ImageView
        android:id="@+id/iconbox5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/iconbox4"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/color_purple" />
    
    <ImageView
        android:id="@+id/icon_box5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/iconbox4"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Week"
        android:visibility="invisible"
        android:src="@drawable/icon_compass" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconbox5"
        android:layout_toRightOf="@+id/iconbox5"
        android:visibility="invisible" />
    
    <ImageButton
        android:id="@+id/delete5"
        android:contentDescription="@string/Week"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/iconbox5"
        android:layout_alignRight="@+id/textView1"
        android:visibility="invisible"
        android:onClick="deleteItem"
        android:tag="5"
        android:src="@drawable/button_delete" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:visibility="invisible"
        android:text="@string/EditSubjects" />

    

</RelativeLayout>
